General movement improvements.

--- a/app/cards/sonic-air-controls.html
+++ b/app/cards/sonic-air-controls.html
@@ -10,7 +10,7 @@
 		<span class = "button ps-x"></span>
 		/ <span class = "button xb-a"></span>
 		/ <b>space</b>
-		- jump
+		- double barrier
 	</span>
 
 	<span class = "button-index">
@@ -24,7 +24,7 @@
 		<span class = "button ps-s"></span>
 		/ <span class = "button xb-x"></span>
 		/ <b>z</b>
-		- <span>no action</span>
+		- <span>light dash</span>
 	</span>
 
 	<span class = "button-index">
