--- a/app/cards/sonic-controls.html
+++ b/app/cards/sonic-controls.html
@@ -17,7 +17,7 @@
 		<span class = "button ps-o"></span>
 		/ <span class = "button xb-b"></span>
 		/ <b>ctrl</b>
-		- <span>no action</span>
+		- <span>spindash</span>
 	</span>
 
 	<span class = "button-index">
