Fixing movement bugs

--- a/app/cards/sonic-controls.html
+++ b/app/cards/sonic-controls.html
@@ -7,44 +7,44 @@
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-x"></span>
-		/ <span class = "button xb-a"></span>
-		/ <b>space</b>
+		<span class = "button ps ps-x"></span>
+		<span class = "button xb xb-a"></span>
+		<b>space</b>
 		- jump
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-o"></span>
-		/ <span class = "button xb-b"></span>
-		/ <b>ctrl</b>
+		<span class = "button ps ps-o"></span>
+		<span class = "button xb xb-b"></span>
+		<b>ctrl</b>
 		- <span>spindash</span>
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-s"></span>
-		/ <span class = "button xb-x"></span>
-		/ <b>z</b>
+		<span class = "button ps ps-s"></span>
+		<span class = "button xb xb-x"></span>
+		<b>z</b>
 		- <span>no action</span>
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-t"></span>
-		/ <span class = "button xb-y"></span>
-		/ <b>x</b>
+		<span class = "button ps ps-t"></span>
+		<span class = "button xb xb-y"></span>
+		<b>x</b>
 		- <span>no action</span>
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-l1"></span>
-		/ <span class = "button xb-lb"></span>
-		/ <b>ctrl</b>
+		<span class = "button ps ps-l1"></span>
+		<span class = "button xb xb-lb"></span>
+		<b>ctrl</b>
 		- <span>no action</span>
 	</span>
 
 	<span class = "button-index">
-		<span class = "button ps-r1"></span>
-		/ <span class = "button xb-rb"></span>
-		/ <b>shift</b>
+		<span class = "button ps ps-r1"></span>
+		<span class = "button xb xb-rb"></span>
+		<b>shift</b>
 		- <span>no action</span>
 	</span>
 </div>
