--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -151,8 +151,26 @@
 		</defs>
 		</svg>
 
-		<div class = "viewport-zoom">
+		<div class = "viewport-double-zoom">
 
+			<div class = "hud hud-dark hud-bottom-right">
+				<table>
+
+					<tr>
+						<td>[[labelFps]]</td>
+						<td>[[fpsSprite]]</td>
+					</tr>
+
+					<tr>
+						<td colspan="2">[[xPos]] [[yPos]]</td>
+					</tr>
+
+				</table>
+			</div>
+
+		</div>
+
+		<div class = "viewport-zoom">
 			<div class = "blurAngle" cv-ref = "blurAngle">
 			<div class = "blurDistance" cv-ref = "blurDistance">
 			<div class = "blurAngleCancel" cv-ref = "blurAngleCancel">
@@ -169,7 +187,6 @@
 
 			<div  cv-ref = "content" class = "viewport-content">
 
-
 				<div cv-ref = "actors" class = "viewport-actors" cv-each = "actors:actor:a">	[[actor]]
 				</div>
 
@@ -181,17 +198,26 @@
 
 			<div class = "filters filters-foreground" cv-ref = "fgFilters"></div>
 
-			<div class = "topLine">
-				<div class = "status-message">[[topLine]]</div>
-			</div>
-			<div class = "focus-me">
-				<div class = "status-message">[[focusMe]]</div>
-			</div>
-			<div class = "status-message">[[status]]</div>
+			<span class = "hud-top-left">
+				<div cv-if = "hasRings">
+					[[rings]]
+				</div>
+				<div cv-if = "hasCoins">
+					[[coins]]
+				</div>
+				<div cv-if = "hasEmeralds">
+					[[emeralds]]
+				</div>
+				<div class = "timer">[[timer]]</div>
+			</span>
 
-		</div>
+			<div class = "hud hud-dark hud-top-right">
+				<div class = "char-hud">
+					<span>[[char]]</span>
+					<div class = "char-icon [[charName]]"></div>
+				</div>
+			</div>
 
-		<div class = "viewport-double-zoom">
 
 			<div class = "hud">
 				<table>
@@ -245,10 +271,10 @@
 						<td>[[frame]]</td>
 					</tr> -->
 
-					<tr>
+					<!-- <tr>
 						<td>[[labelFps]]</td>
 						<td>[[fpsSprite]]</td>
-					</tr>
+					</tr> -->
 
 					<!-- <tr>
 						<td>[[labelGSpeed]]</td>
@@ -257,6 +283,16 @@
 
 				</table>
 			</div>
+
+			<div class = "topLine">
+				<div class = "status-message">[[topLine]]</div>
+			</div>
+
+			<div class = "focus-me">
+				<div class = "status-message">[[focusMe]]</div>
+			</div>
+
+			<div class = "status-message">[[status]]</div>
 
 			<div class = "titlecard [[animation]]">
 
@@ -285,26 +321,13 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
 
 		</div>
 
-		<span class = "hud-top-left">
-			<div class = "timer">[[timer]]</div>
-			<div cv-if = "hasRings">
-				[[rings]]
-			</div>
-			<div cv-if = "hasCoins">
-				[[coins]]
-			</div>
-			<div cv-if = "hasEmeralds">
-				[[emeralds]]
-			</div>
-		</span>
 	</div>
 
-	<div class = "viewport-caption">
+	<div class = "viewport-caption [[inputType]]">
 		<div class = "top-bar">
 			<div class = "buttons">
 				<button cv-on = "click:fullscreen(event)">fullscreen</button>
@@ -340,7 +363,7 @@
 
 		<div>
 			<div>
-				<b>controls:</b>
+				<b>controls: [[inputName]]</b>
 				[[controlCard]]
 			</div>
 
@@ -358,6 +381,11 @@
 				</label>
 
 				<label>
+					<span>max fps</span>
+					<input type = "number" cv-bind = "maxFps" value = "100" />
+				</label>
+
+			<!-- 	<label>
 					<span>player can stop on walls</span>
 					<input type = "checkbox" cv-bind = "stayStuck" value = "1" />
 				</label>
@@ -368,9 +396,7 @@
 					<br />
 				</label>
 
-				<small><small>(requires "stop on walls")</small></small>
-
-				<hr />
+				<small><small>(requires "stop on walls")</small></small> -->
 
 				<label>
 					<span>speed limit:</span>
