Correcting movement bugs.

--- a/app/cards/sonic-air-controls.html
+++ b/app/cards/sonic-air-controls.html
@@ -37,14 +37,15 @@
 	<span class = "button-index">
 		<span class = "button ps ps-l1"></span>
 		<span class = "button xb xb-lb"></span>
-		<b>ctrl</b>
-		- <span>no action</span>
+		<b>q</b>
+		- <span>air dash left</span>
 	</span>
 
 	<span class = "button-index">
 		<span class = "button ps ps-r1"></span>
 		<span class = "button xb xb-rb"></span>
-		<b>shift</b>
-		- <span>no action</span>
+		<b>e</b>
+		- <span>air dash right</span>
 	</span>
+
 </div>
