--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -208,7 +208,7 @@
 				<div cv-if = "hasEmeralds">
 					[[emeralds]]
 				</div>
-				<div class = "timer">[[timer]]</div>
+				<!-- <div class = "timer">[[timer]]</div> -->
 			</span>
 
 			<div class = "hud hud-dark hud-top-right">
