Supersonic and rolling eggman

--- a/app/cards/sonic-air-controls.html
+++ b/app/cards/sonic-air-controls.html
@@ -23,14 +23,14 @@
 	<span class = "button-index">
 		<span class = "button ps ps-s"></span>
 		<span class = "button xb xb-x"></span>
-		<b>z</b>
+		<b>shift</b>
 		- <span>light dash</span>
 	</span>
 
 	<span class = "button-index">
 		<span class = "button ps ps-t"></span>
 		<span class = "button xb xb-y"></span>
-		<b>x</b>
+		<b>z</b>
 		- <span>no action</span>
 	</span>
 
