--- a/app/cards/sonic-controls.html
+++ b/app/cards/sonic-controls.html
@@ -32,7 +32,7 @@
 		<span class = "button ps ps-t"></span>
 		<span class = "button xb xb-y"></span>
 		<b>x</b>
-		- <span>no action</span>
+		- <span>super</span>
 	</span>
 
 	<span class = "button-index">
