--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -161,9 +161,9 @@
 						<td>[[fpsSprite]]</td>
 					</tr>
 
-					<tr>
+				<!-- 	<tr>
 						<td colspan="2">[[xPos]] [[yPos]]</td>
-					</tr>
+					</tr> -->
 
 				</table>
 			</div>
@@ -398,12 +398,12 @@
 
 				<small><small>(requires "stop on walls")</small></small> -->
 
-				<label>
+				<!-- <label>
 					<span>speed limit:</span>
 					<form>
 						<input type = "number" cv-bind = "maxSpeed" min = "1" />
 					</form>
-				</label>
+				</label> -->
 
 				<label>
 					<span>scale:</span>
