--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -278,6 +278,11 @@
 				</tr></table>
 			</div>
 
+			<div class = "hud hud-dark hud-bottom-left">
+				[[nowPlaying]]
+				[[trackName]]
+			</div>
+
 			<div class = "filters filters-foreground" cv-ref = "fgFilters"></div>
 
 			<div class = "filters filters-screen [[screenFilter]]" cv-ref = "screenFilters"></div>
