--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -1,11 +1,11 @@
 <section class = "filters" cv-each = "effects:effect">[[effect]]</section>
 
-<div class = "viewport-frame [[secret]]" cv-ref = "frame">
+<div class = "viewport-frame [[initializing]] [[standalone]] [[secret]]" cv-ref = "frame">
 	<div class = "viewport-header">
 		<span class = "sean-icon"></span>
 		<h1>Pixel Physics</h1>
 	</div>
-	<div class = "viewport [[fullscreen]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event)">
+	<div class = "viewport [[standalone]] [[fullscreen]]" cv-ref = "viewport" tabindex="0" cv-on = "click(event)">
 
 		<svg>
 		<defs>
