Menu effects and on screen mute & fullscreen.

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -285,8 +285,15 @@
 
 			<div class = "status-message">[[status]]</div>
 
-
 		</div>
+
+		<div class = "quick-controls">
+			[[muteSwitch]]
+			<div class = "button" cv-on = "click:fullscreen()">
+				<image src = "/ui/fullscreen.svg" />
+			</div>
+		</div>
+
 
 	</div>
 
@@ -380,6 +387,8 @@
 	</div>
 
 </div>
+
+
 
 
 <div class = "sun"></div>
