Visual effects, slope momentum and performance tweaks.

--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -1,4 +1,5 @@
 <div class = "screen-card screen-card-[[cardName]] [[animation]]">
+	<div class = "menu-scroller"></div>
 	<div class = "menu-container">
 		<div>Sonic 3000</div>
 		<ul cv-ref = "bound">
