Console and basics for elemental sheilds

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -284,6 +284,8 @@
 
 			<div class = "status-message">[[status]]</div>
 
+			<div class = "console" cv-ref = "subspace">[[subspace]]</div>
+
 		</div>
 
 		<div class = "quick-controls">
