Improving GPU usage when diplaying water.

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -22,9 +22,8 @@
 				</feMerge>
 			</filter>
 
-			<filter
+			<filter id = "waves"
 				color-interpolation-filters="sRGB"
-				id = "waves"
 				x      ="0%"
 				y      ="0%"
 				height ="100%"
@@ -63,7 +62,7 @@
 					<animate
 						attributeName="dy"
 						values = "0;-64"
-						dur="2s"
+						dur="4s"
 						repeatCount="indefinite" />
 
 				</feOffset>
@@ -279,10 +278,10 @@
 
 			</div>
 
-			<div class = "hud hud-dark hud-bottom-left">
+			<!-- <div class = "hud hud-dark hud-bottom-left">
 				[[nowPlaying]]
 				[[trackName]]
-			</div>
+			</div> -->
 
 			<div class = "filters filters-foreground" cv-ref = "fgFilters"></div>
 
