--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -304,7 +304,7 @@
 
 			<div class = "status-message">[[status]]</div>
 
-			<div class = "console" cv-ref = "subspace">[[subspace]]</div>
+			<div class = "console [[showConsole]]" cv-ref = "subspace" tab-index = "0">[[subspace]]</div>
 
 		</div>
 
@@ -372,9 +372,9 @@
 				<b>controls: [[inputName]]</b> [[controlCard]]
 			</div>
 
-			<div>
+			<!-- <div>
 				<b>moves:</b> [[moveCard]]
-			</div>
+			</div> -->
 
 			<div class = "right">
 
