--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -1,6 +1,6 @@
 <section class = "filters" cv-each = "effects:effect">[[effect]]</section>
 
-<div class = "viewport-frame [[initializing]] [[standalone]] [[secret]]" cv-ref = "frame">
+<div class = "viewport-frame [[initializing]] [[standalone]] [[secret]] [[level]]" cv-ref = "frame">
 	<div class = "viewport-header">
 		<span class = "sean-icon"></span>
 		<h1>Pixel Physics</h1>
@@ -260,7 +260,7 @@
 
 			</div>
 
-			<div class = "hud hud-bottom-right">
+			<div class = "hud hud-bottom-right" cv-if = "fps">
 
 				<div class ="sheild-hud [[currentSheild]] [[hasElectric]] [[hasFire]] [[hasWater]]">
 					<div class = "sheild-icon sheild-electric"></div>
@@ -304,7 +304,10 @@
 
 			<div class = "status-message">[[status]]</div>
 
+			<section class = "contents" cv-if = "networked">[[chatBox]]</section>
+
 			<div class = "console [[showConsole]]" cv-ref = "subspace" tab-index = "0">[[subspace]]</div>
+
 
 		</div>
 
