--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -292,6 +292,8 @@
 				<div cv-if = "hasEmeralds">[[emeralds]]</div>
 			</div>
 
+			<section class = "full" cv-if = "paused">[[pauseMenu]]</section>
+
 			[[titlecard]]
 
 			<div class = "topLine">
