--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -62,7 +62,7 @@
 					<animate
 						attributeName="dy"
 						values = "0;-64"
-						dur="4s"
+						dur="1500ms"
 						repeatCount="indefinite" />
 
 				</feOffset>
