Ceiling and floor engagement glitches and backdrop swapping

--- a/app/viewport/viewport.html
+++ b/app/viewport/viewport.html
@@ -154,6 +154,8 @@
 
 			[[backdrop]]
 
+			<div class = "backdrops" cv-ref ="backdrops"></div>
+
 			<div class = "blurAngle" cv-ref = "blurAngle">
 			<div class = "blurDistance" cv-ref = "blurDistance">
 			<div class = "blurAngleCancel" cv-ref = "blurAngleCancel">
