Physics & camera tweaks

--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -2,7 +2,8 @@
 
 	<div class = "menu-scroller"></div>
 
-	[[warp]]
+	[[pinch]]
+	[[twist]]
 
 	<section class = "contents" cv-if = "!connected">
 		<div class = "menu-container">
