p2p connection sequence restored, physics and rendering tweaks.

--- a/app/Menu/main-menu.html
+++ b/app/Menu/main-menu.html
@@ -73,7 +73,7 @@
 				<label cv-if = "haveToken">
 					<p>Input the token they send back here.</p>
 					<textarea cv-bind = "input" cv-on = "click:paste(event)"></textarea>
-					<button cv-on = "click:accept">go!</button>
+					<button cv-on = "click:acceptRtp">go!</button>
 					<div class = "close" cv-on = "click:disconnect"></div>
 				</label>
 
