Slope glitch and hideable pause menu

--- a/app/Menu/pause-menu.html
+++ b/app/Menu/pause-menu.html
@@ -1,4 +1,4 @@
-<div class = "screen-card screen-card-[[cardName]] [[animation]]">
+<div class = "screen-card screen-card-[[cardName]] [[animation]] [[hideMenu]]">
 
 	<div class = "menu-scroller"></div>
 
